--- a/Analysis/Syntactic_Disjunction.Rmd
+++ b/Analysis/Syntactic_Disjunction.Rmd
@@ -14,9 +14,6 @@ Load required libraries
 ```{r, include= FALSE}
 library('tidyverse')
 library('ggplot2')
-library('lme4')
-library('lmerTest')
-library('boot')
 ```
 
 
@@ -34,7 +31,7 @@ data = data %>%
 data = data %>% select(workerid, ID, chance)
 
 # Reads in key file
-key = read.csv('/Users/caseyfelton/Desktop/Githubs/syntactic_disjunction_html/Analysis/Resources/key.csv')
+key = read.csv('/Users/caseyfelton/Desktop/Githubs/syntactic_disjunction_html/Analysis/Resources/new_key.csv')
 
 # Factorizes IS column
 # Factorizes and renames id column
@@ -52,9 +49,9 @@ data = left_join(data, key, by = 'ID')
 There are a total of 9 attention checking control items, each of which should result in either close to 0% or close to 100% chance ratings from participants who were paying attention. The following code block excludes participants who did not rate at least 5 out of the 6 control items as within 10% of either 0% or 100%, whichever was accurate. 
 ```{r}
 #Filter just the 100% control items
-cntr_100 = data %>% filter(Experimental == 'And' | Experimental == 'Then')
+cntr_100 = data %>% filter(Condition == 'And')
 #Filter just the 0% control items
-cntr_0 = data %>% filter(Experimental == 'But Not')
+cntr_0 = data %>% filter(Condition == 'But_Not')
 
 #Adds a column for accuracy
 cntr_100$correct = cntr_100$chance >= 90
@@ -71,7 +68,7 @@ data = left_join(data, accuracy_table, by = 'workerid')
 
 #Filter out participants who got less than 5/6 correct (Starting with 50, 8 are excluded, leaving 42)
 data = data %>% filter(mean_accuracy > .8)
-data = data %>% filter(Experimental == "experimental")
+data = data %>% filter(Group != "filler")
 ```
 
 # Overview of Analysis
@@ -80,32 +77,30 @@ There were a few research questions we most wanted to test in this experiment. F
 The following code aggregates group means, standard deviations, and standard errors for each item
 ```{r}
 means = data %>% 
-  group_by(Elided) %>% 
+  group_by(Condition) %>% 
   summarise(Mean_Chance = mean(chance),
             Standard_Deviation = sd(chance),
             Standard_Error = Standard_Deviation/sqrt(length(unique(data$workerid))))
 print(means)
 ```
 
-Some graphing
+Generates a graph with each column being an item, error bars are +/- 2 SE, fill is by condition
 ```{r}
-#Dot plot showing elided vs non-elided
-g = ggplot(data = data, aes(Elided, chance))
-g + geom_point()
+graph_data = left_join(means, key, by = 'ID') %>% mutate(ID = fct_reorder(ID, Mean_Chance))
 
-# Including iconicity
-g2 = ggplot(data = data, aes(Iconicity, chance)) +
-  geom_point(aes(fill = Elided)) + scale_color_manual(values = c("0" = "blue", "1" = "red"))
+g = ggplot(graph_data, aes(ID, Mean_Chance))
+g = g + geom_col(position = "dodge", aes(fill = Condition)) + labs(title = 'Means and Variation in Inclusivity Ratings by Item', x = 'Items', y = 'Mean Inclusivity Rating (%)')+
+  geom_errorbar(width = .5,
+                aes(ymin = Mean_Chance - Standard_Error*2, ymax = Mean_Chance + Standard_Error*2),
+                position = position_dodge(.9)) +
+               theme_bw() +
+               theme(axis.text.x = element_blank()) + labs(fill = "Condition")
+
+
 ```
 
 This model tests the effect ellipsis and iconicity:
 ```{r}
-model_1 = lm(chance ~ Elided + Iconicity + (1|workerid) + (1|Item), data = data)
+model_1 = lm(chance ~ Condition + Con_Length + Overall_Length + (1|workerid) + (1|Item), data = data)
 summary(model_1)
-```
-
-This model tests the more complex types, but there can no longer be a random intercept by item:
-```{r}
-model_2 = lm(chance ~ Elipsis_Type + Iconicity + (1|workerid), data = data)
-summary(model_2)
 ```
